padthv1 - An old-school additive polyphonic synthesizer
-------------------------------------------------------

ChangeLog


GIT HEAD

- Fixed typos and updated some old MIDI GM2 Controller names.


0.9.26  2022-06-07  An End-of-Sping'22 Release.

- Corrected an incredible mistake introduced in the last year's
  Glide/portamento protential crash fix.
- Added Qt::Svg module as required at build time.


0.9.25  2022-04-07  A Spring'22 Release.

- Added missing file code to desktop exec entry (standalone only).
- Main application icon is now presented in scalable format (SVG).
- Migrated command line parsing to QCommandLineParser/Option
  (Qt >= 5.2)
- Avoid issuing NSM dirty messages as much as possible.


0.9.24  2022-01-09  A Winter'22 Release.

- Dropped autotools (autoconf, automake, etc.) build system.
- Fixed deprecate warnings in preparation for Qt >= 6.2.


0.9.23  2021-07-07  An Early-Summer'21 Release.

- Fixed some ages old Glide/portamento potential crash bug
  (as reported by AnClark, while on synthv1).
- Add support for LV2 UI Windows platform (by AnClark, also
  while on synthv1).
- Sustenuto pedal controller (MIDI CC#66) is now implemented.
- Fixed old Sustain/Damper/Hold pedal controller (MIDI CC#64)
  note-off processing.
- Have some tolerance for buffer-size changes.
- All builds default to Qt6 (Qt >= 6.1) where available.
- CMake is now the official build system.


0.9.22  2021-05-13  A Spring'21 Release.

- All packaging builds switching to CMake.


0.9.21  2021-03-16  An End-of-Winter'21 Release.

- Fixed an old lurker, causing slight differences to voice
  on-sets, due to a wrong initial LFO Volume ramping value.
- Slightly improved eye-candyness to all graphic widgets,
  most especially on the EG widget handling, curved lines
  and gradient fills.


0.9.20  2021-02-10  A Winter'21 Release.

- When under under the NSM auspices, fix SIGTERM handler
  on exit and just hide the main-window on close (applies
  to the JACK stand-alone only).

